// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`emptyBoard 1`] = `
Object {
  "fileCount": 8,
  "rankCount": 8,
  "squares": Array [
    Object {
      "piece": undefined,
      "pos": "a1",
    },
    Object {
      "piece": undefined,
      "pos": "a2",
    },
    Object {
      "piece": undefined,
      "pos": "a3",
    },
    Object {
      "piece": undefined,
      "pos": "a4",
    },
    Object {
      "piece": undefined,
      "pos": "a5",
    },
    Object {
      "piece": undefined,
      "pos": "a6",
    },
    Object {
      "piece": undefined,
      "pos": "a7",
    },
    Object {
      "piece": undefined,
      "pos": "a8",
    },
    Object {
      "piece": undefined,
      "pos": "b1",
    },
    Object {
      "piece": undefined,
      "pos": "b2",
    },
    Object {
      "piece": undefined,
      "pos": "b3",
    },
    Object {
      "piece": undefined,
      "pos": "b4",
    },
    Object {
      "piece": undefined,
      "pos": "b5",
    },
    Object {
      "piece": undefined,
      "pos": "b6",
    },
    Object {
      "piece": undefined,
      "pos": "b7",
    },
    Object {
      "piece": undefined,
      "pos": "b8",
    },
    Object {
      "piece": undefined,
      "pos": "c1",
    },
    Object {
      "piece": undefined,
      "pos": "c2",
    },
    Object {
      "piece": undefined,
      "pos": "c3",
    },
    Object {
      "piece": undefined,
      "pos": "c4",
    },
    Object {
      "piece": undefined,
      "pos": "c5",
    },
    Object {
      "piece": undefined,
      "pos": "c6",
    },
    Object {
      "piece": undefined,
      "pos": "c7",
    },
    Object {
      "piece": undefined,
      "pos": "c8",
    },
    Object {
      "piece": undefined,
      "pos": "d1",
    },
    Object {
      "piece": undefined,
      "pos": "d2",
    },
    Object {
      "piece": undefined,
      "pos": "d3",
    },
    Object {
      "piece": undefined,
      "pos": "d4",
    },
    Object {
      "piece": undefined,
      "pos": "d5",
    },
    Object {
      "piece": undefined,
      "pos": "d6",
    },
    Object {
      "piece": undefined,
      "pos": "d7",
    },
    Object {
      "piece": undefined,
      "pos": "d8",
    },
    Object {
      "piece": undefined,
      "pos": "e1",
    },
    Object {
      "piece": undefined,
      "pos": "e2",
    },
    Object {
      "piece": undefined,
      "pos": "e3",
    },
    Object {
      "piece": undefined,
      "pos": "e4",
    },
    Object {
      "piece": undefined,
      "pos": "e5",
    },
    Object {
      "piece": undefined,
      "pos": "e6",
    },
    Object {
      "piece": undefined,
      "pos": "e7",
    },
    Object {
      "piece": undefined,
      "pos": "e8",
    },
    Object {
      "piece": undefined,
      "pos": "f1",
    },
    Object {
      "piece": undefined,
      "pos": "f2",
    },
    Object {
      "piece": undefined,
      "pos": "f3",
    },
    Object {
      "piece": undefined,
      "pos": "f4",
    },
    Object {
      "piece": undefined,
      "pos": "f5",
    },
    Object {
      "piece": undefined,
      "pos": "f6",
    },
    Object {
      "piece": undefined,
      "pos": "f7",
    },
    Object {
      "piece": undefined,
      "pos": "f8",
    },
    Object {
      "piece": undefined,
      "pos": "g1",
    },
    Object {
      "piece": undefined,
      "pos": "g2",
    },
    Object {
      "piece": undefined,
      "pos": "g3",
    },
    Object {
      "piece": undefined,
      "pos": "g4",
    },
    Object {
      "piece": undefined,
      "pos": "g5",
    },
    Object {
      "piece": undefined,
      "pos": "g6",
    },
    Object {
      "piece": undefined,
      "pos": "g7",
    },
    Object {
      "piece": undefined,
      "pos": "g8",
    },
    Object {
      "piece": undefined,
      "pos": "h1",
    },
    Object {
      "piece": undefined,
      "pos": "h2",
    },
    Object {
      "piece": undefined,
      "pos": "h3",
    },
    Object {
      "piece": undefined,
      "pos": "h4",
    },
    Object {
      "piece": undefined,
      "pos": "h5",
    },
    Object {
      "piece": undefined,
      "pos": "h6",
    },
    Object {
      "piece": undefined,
      "pos": "h7",
    },
    Object {
      "piece": undefined,
      "pos": "h8",
    },
  ],
}
`;

exports[`initializeBoard 1`] = `
Object {
  "fileCount": 8,
  "rankCount": 8,
  "squares": Array [
    Object {
      "piece": Object {
        "color": "white",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": "west",
        "type": "rook",
      },
      "pos": "a1",
    },
    Object {
      "piece": Object {
        "color": "white",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": undefined,
        "type": "pawn",
      },
      "pos": "a2",
    },
    Object {
      "pos": "a3",
    },
    Object {
      "pos": "a4",
    },
    Object {
      "pos": "a5",
    },
    Object {
      "pos": "a6",
    },
    Object {
      "piece": Object {
        "color": "black",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": undefined,
        "type": "pawn",
      },
      "pos": "a7",
    },
    Object {
      "piece": Object {
        "color": "black",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": "west",
        "type": "rook",
      },
      "pos": "a8",
    },
    Object {
      "piece": Object {
        "color": "white",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": "west",
        "type": "knight",
      },
      "pos": "b1",
    },
    Object {
      "piece": Object {
        "color": "white",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": undefined,
        "type": "pawn",
      },
      "pos": "b2",
    },
    Object {
      "pos": "b3",
    },
    Object {
      "pos": "b4",
    },
    Object {
      "pos": "b5",
    },
    Object {
      "pos": "b6",
    },
    Object {
      "piece": Object {
        "color": "black",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": undefined,
        "type": "pawn",
      },
      "pos": "b7",
    },
    Object {
      "piece": Object {
        "color": "black",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": "west",
        "type": "knight",
      },
      "pos": "b8",
    },
    Object {
      "piece": Object {
        "color": "white",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": "west",
        "type": "bishop",
      },
      "pos": "c1",
    },
    Object {
      "piece": Object {
        "color": "white",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": undefined,
        "type": "pawn",
      },
      "pos": "c2",
    },
    Object {
      "pos": "c3",
    },
    Object {
      "pos": "c4",
    },
    Object {
      "pos": "c5",
    },
    Object {
      "pos": "c6",
    },
    Object {
      "piece": Object {
        "color": "black",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": undefined,
        "type": "pawn",
      },
      "pos": "c7",
    },
    Object {
      "piece": Object {
        "color": "black",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": "west",
        "type": "bishop",
      },
      "pos": "c8",
    },
    Object {
      "piece": Object {
        "color": "white",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": undefined,
        "type": "queen",
      },
      "pos": "d1",
    },
    Object {
      "piece": Object {
        "color": "white",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": undefined,
        "type": "pawn",
      },
      "pos": "d2",
    },
    Object {
      "pos": "d3",
    },
    Object {
      "pos": "d4",
    },
    Object {
      "pos": "d5",
    },
    Object {
      "pos": "d6",
    },
    Object {
      "piece": Object {
        "color": "black",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": undefined,
        "type": "pawn",
      },
      "pos": "d7",
    },
    Object {
      "piece": Object {
        "color": "black",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": undefined,
        "type": "queen",
      },
      "pos": "d8",
    },
    Object {
      "piece": Object {
        "color": "white",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": undefined,
        "type": "king",
      },
      "pos": "e1",
    },
    Object {
      "piece": Object {
        "color": "white",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": undefined,
        "type": "pawn",
      },
      "pos": "e2",
    },
    Object {
      "pos": "e3",
    },
    Object {
      "pos": "e4",
    },
    Object {
      "pos": "e5",
    },
    Object {
      "pos": "e6",
    },
    Object {
      "piece": Object {
        "color": "black",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": undefined,
        "type": "pawn",
      },
      "pos": "e7",
    },
    Object {
      "piece": Object {
        "color": "black",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": undefined,
        "type": "king",
      },
      "pos": "e8",
    },
    Object {
      "piece": Object {
        "color": "white",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": "east",
        "type": "bishop",
      },
      "pos": "f1",
    },
    Object {
      "piece": Object {
        "color": "white",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": undefined,
        "type": "pawn",
      },
      "pos": "f2",
    },
    Object {
      "pos": "f3",
    },
    Object {
      "pos": "f4",
    },
    Object {
      "pos": "f5",
    },
    Object {
      "pos": "f6",
    },
    Object {
      "piece": Object {
        "color": "black",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": undefined,
        "type": "pawn",
      },
      "pos": "f7",
    },
    Object {
      "piece": Object {
        "color": "black",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": "east",
        "type": "bishop",
      },
      "pos": "f8",
    },
    Object {
      "piece": Object {
        "color": "white",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": "east",
        "type": "knight",
      },
      "pos": "g1",
    },
    Object {
      "piece": Object {
        "color": "white",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": undefined,
        "type": "pawn",
      },
      "pos": "g2",
    },
    Object {
      "pos": "g3",
    },
    Object {
      "pos": "g4",
    },
    Object {
      "pos": "g5",
    },
    Object {
      "pos": "g6",
    },
    Object {
      "piece": Object {
        "color": "black",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": undefined,
        "type": "pawn",
      },
      "pos": "g7",
    },
    Object {
      "piece": Object {
        "color": "black",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": "east",
        "type": "knight",
      },
      "pos": "g8",
    },
    Object {
      "piece": Object {
        "color": "white",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": "east",
        "type": "rook",
      },
      "pos": "h1",
    },
    Object {
      "piece": Object {
        "color": "white",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": undefined,
        "type": "pawn",
      },
      "pos": "h2",
    },
    Object {
      "pos": "h3",
    },
    Object {
      "pos": "h4",
    },
    Object {
      "pos": "h5",
    },
    Object {
      "pos": "h6",
    },
    Object {
      "piece": Object {
        "color": "black",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": undefined,
        "type": "pawn",
      },
      "pos": "h7",
    },
    Object {
      "piece": Object {
        "color": "black",
        "hasNeverMoved": true,
        "isFromPromotion": false,
        "possibleMoves": Array [],
        "subType": "east",
        "type": "rook",
      },
      "pos": "h8",
    },
  ],
}
`;

exports[`initializeBoard: empty 1`] = `
Object {
  "fileCount": 8,
  "rankCount": 8,
  "squares": Array [
    Object {
      "pos": "a1",
    },
    Object {
      "pos": "a2",
    },
    Object {
      "pos": "a3",
    },
    Object {
      "pos": "a4",
    },
    Object {
      "pos": "a5",
    },
    Object {
      "pos": "a6",
    },
    Object {
      "pos": "a7",
    },
    Object {
      "pos": "a8",
    },
    Object {
      "pos": "b1",
    },
    Object {
      "pos": "b2",
    },
    Object {
      "pos": "b3",
    },
    Object {
      "pos": "b4",
    },
    Object {
      "pos": "b5",
    },
    Object {
      "pos": "b6",
    },
    Object {
      "pos": "b7",
    },
    Object {
      "pos": "b8",
    },
    Object {
      "pos": "c1",
    },
    Object {
      "pos": "c2",
    },
    Object {
      "pos": "c3",
    },
    Object {
      "pos": "c4",
    },
    Object {
      "pos": "c5",
    },
    Object {
      "pos": "c6",
    },
    Object {
      "pos": "c7",
    },
    Object {
      "pos": "c8",
    },
    Object {
      "pos": "d1",
    },
    Object {
      "pos": "d2",
    },
    Object {
      "pos": "d3",
    },
    Object {
      "pos": "d4",
    },
    Object {
      "pos": "d5",
    },
    Object {
      "pos": "d6",
    },
    Object {
      "pos": "d7",
    },
    Object {
      "pos": "d8",
    },
    Object {
      "pos": "e1",
    },
    Object {
      "pos": "e2",
    },
    Object {
      "pos": "e3",
    },
    Object {
      "pos": "e4",
    },
    Object {
      "pos": "e5",
    },
    Object {
      "pos": "e6",
    },
    Object {
      "pos": "e7",
    },
    Object {
      "pos": "e8",
    },
    Object {
      "pos": "f1",
    },
    Object {
      "pos": "f2",
    },
    Object {
      "pos": "f3",
    },
    Object {
      "pos": "f4",
    },
    Object {
      "pos": "f5",
    },
    Object {
      "pos": "f6",
    },
    Object {
      "pos": "f7",
    },
    Object {
      "pos": "f8",
    },
    Object {
      "pos": "g1",
    },
    Object {
      "pos": "g2",
    },
    Object {
      "pos": "g3",
    },
    Object {
      "pos": "g4",
    },
    Object {
      "pos": "g5",
    },
    Object {
      "pos": "g6",
    },
    Object {
      "pos": "g7",
    },
    Object {
      "pos": "g8",
    },
    Object {
      "pos": "h1",
    },
    Object {
      "pos": "h2",
    },
    Object {
      "pos": "h3",
    },
    Object {
      "pos": "h4",
    },
    Object {
      "pos": "h5",
    },
    Object {
      "pos": "h6",
    },
    Object {
      "pos": "h7",
    },
    Object {
      "pos": "h8",
    },
  ],
}
`;
